[gd_scene load_steps=8 format=2]

[ext_resource path="res://cenas/menu.gd" type="Script" id=1]
[ext_resource path="res://audios/menu.ogg" type="AudioStream" id=2]
[ext_resource path="res://fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 54
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true

[node name="Unkillable" type="Label" parent="."]
margin_left = 180.907
margin_top = 47.8405
margin_right = 466.907
margin_bottom = 108.84
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.227451, 0.329412, 1, 1 )
text = "Unkillable"

[node name="Volume" type="Label" parent="."]
margin_left = 279.652
margin_top = 263.042
margin_right = 374.652
margin_bottom = 291.042
custom_fonts/font = SubResource( 2 )
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="."]
margin_left = 178.937
margin_top = 301.937
margin_right = 476.937
margin_bottom = 327.937
value = 50.0
ticks_on_borders = true

[node name="Dificuldade" type="Label" parent="."]
margin_left = 247.927
margin_top = 150.843
margin_right = 391.927
margin_bottom = 178.843
custom_fonts/font = SubResource( 2 )
text = "Dificuldade"

[node name="DificuldadeOption" type="OptionButton" parent="."]
margin_left = 214.89
margin_top = 202.665
margin_right = 428.89
margin_bottom = 244.665

[node name="Sair" type="Button" parent="."]
margin_left = 167.339
margin_top = 387.078
margin_right = 284.339
margin_bottom = 448.078
custom_fonts/font = SubResource( 3 )
text = "Sair"

[node name="Iniciar" type="Button" parent="."]
margin_left = 379.296
margin_top = 388.236
margin_right = 502.296
margin_bottom = 444.236
custom_fonts/font = SubResource( 4 )
text = "Iniciar"
[connection signal="value_changed" from="VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
